Many new namelists and good progress on conformer.omni

--- a/src/Namelists/CMakeLists.txt
+++ b/src/Namelists/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(input input.cpp)
 add_library(namelist_element namelist_element.cpp)
 add_library(namelist_emulator namelist_emulator.cpp)
 add_library(nml_files nml_files.cpp)
-add_library(nml_rst nml_rst.cpp)
+add_library(nml_restraint nml_restraint.cpp)
