--- a/apps/Conf/test/cgen.in
+++ b/apps/Conf/test/cgen.in
@@ -1,5 +1,5 @@
 &files
-  -p /projects2/insite/david.cerutti/Omni/test/Namelists/topol/.*.top
-  -c /projects2/insite/david.cerutti/Omni/test/Namelists/coord/.*.inpcrd
+  -p /home/david.cerutti/Omni/test/Namelists/topol/.*.top
+  -c /home/david.cerutti/Omni/test/Namelists/coord/.*.inpcrd
 &end
 
