More progress on the conformer generator.  Back to the issue of restraints, to see if it can be brought up to speed before completing the topology synthesis.  A PhaseSpaceSynthesis for coordinates is being built by the conformer.omni app.

--- a/src/UnitTesting/CMakeLists.txt
+++ b/src/UnitTesting/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(approx approx.cpp)
-add_library(benchmark benchmark.cpp)
+add_library(stopwatch stopwatch.cpp)
 add_library(checklist checklist.cpp)
 add_library(file_snapshot file_snapshot.cpp)
 add_library(test_environment test_environment.cpp)
