Update many CMakeLists.txt files in preparation for a CPU-side CMake build

--- a/src/Accelerator/CMakeLists.txt
+++ b/src/Accelerator/CMakeLists.txt
@@ -1,1 +1,6 @@
+add_library(gpu_details gpu_details.cpp)
 add_library(hybrid hybrid.cpp)
+add_library(kernel_manager kernel_manager.cpp)
+
+install(TARGETS gpu_details hybrid kernel_manager DESTINATION lib)
+install(FILES gpu_details.h hybrid.h hybrid.tpp kernel_manager.h DESTINATION include)
