Some corrections to the CMake build system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,3 +20,6 @@ add_subdirectory(Synthesis)
 add_subdirectory(Topology)
 add_subdirectory(Trajectory)
 add_subdirectory(UnitTesting)
+
+# Add the copyright.h file
+install(FILES copyright.h DESTINATION include)
