--- a/src/Restraints/CMakeLists.txt
+++ b/src/Restraints/CMakeLists.txt
@@ -6,4 +6,4 @@ add_library(restraint_enumerators restraint_enumerators.cpp)
 install(TARGETS bounded_restraint restraint_apparatus restraint_builder restraint_enumerators
         DESTINATION lib)
 install(FILES bounded_restraint.h restraint_apparatus.h restraint_apparatus.tpp restraint_builder.h
-        restraint_enumerators.h restraint_util.h restraint_util.tpp)
+        restraint_enumerators.h restraint_util.h restraint_util.tpp DESTINATION include)
