--- a/src/DataTypes/CMakeLists.txt
+++ b/src/DataTypes/CMakeLists.txt
@@ -1,2 +1,4 @@
+include_directories(../)
+
 install(FILES common_types.h common_types.tpp mixed_types.h stormm_vector_types.h
         stormm_vector_types.tpp DESTINATION include)
