--- a/src/FileManagement/CMakeLists.txt
+++ b/src/FileManagement/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(../)
+
 add_library(directory_util directory_util.cpp)
 add_library(file_listing file_listing.cpp)
 add_library(file_util file_util.cpp)
