--- a/src/Reporting/CMakeLists.txt
+++ b/src/Reporting/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(../)
+
 add_library(code_dox code_dox.cpp)
 add_library(display display.cpp)
 add_library(error_format error_format.cpp)
