--- a/src/Numerics/CMakeLists.txt
+++ b/src/Numerics/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(../)
+
 add_library(split_fixed_precision split_fixed_precision.cpp)
 
 install(TARGETS split_fixed_precision DESTINATION lib)
