Fix compilation errors in the CMake CUDA installation.
Most errors concerning vector tuple types stemmed from the fact that the programs declaring them
through "using" statements were not anticipated to be compiled with CUDA enabled (the original
Makefile did not compile these programs as part of "make test.cuda" or "make apps.cuda").  These
errors have been corrected by protecting the declarations, save for ullint2 (which is a typedef of
ulonglong2) in pre-processor directives that respond to the enablement of CUDA.

Most other errors concerned functions having different definitions when CUDA was enabled, and have
been harmonized.  The GpuDetails object was also given explicit logical comparison operators to
solve other compiler errors.

--- a/apps/Conf/CMakeLists.txt
+++ b/apps/Conf/CMakeLists.txt
@@ -1,12 +1,22 @@
 set(APP_NAME "conformer.${STORMM_APP_SUFFIX}")
+set(CUDA_APP_NAME "conformer.${STORMM_APP_SUFFIX}.cuda")
 
 add_executable(${APP_NAME}
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/conformer.cu
         ${CMAKE_CURRENT_SOURCE_DIR}/src/conformer.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/setup.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/setup.h)
+
+add_executable(${CUDA_APP_NAME}
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/conformer.cu
         ${CMAKE_CURRENT_SOURCE_DIR}/src/setup.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/setup.h)
 
 target_link_libraries(${APP_NAME} ${PROJECT_NAME})
 
+target_link_libraries(${CUDA_APP_NAME} ${PROJECT_NAME})
+
 install(TARGETS ${APP_NAME}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+install(TARGETS ${CUDA_APP_NAME}
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
