--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,10 +96,10 @@ install(DIRECTORY "${CMAKE_SOURCE_DIR}/src/"
 
 install(TARGETS ${PROJECT_NAME}
         EXPORT  ${PROJECT_NAME}Targets
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME}
-        BUNDLE  DESTINATION ${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME})
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        BUNDLE  DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 #--- Build the tests ---
 
