--- a/conda/recipe.yaml
+++ b/conda/recipe.yaml
@@ -22,8 +22,11 @@ outputs:
         - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
         - cmake
         - make
+      host:
+        - rdkit
       run:
         - __cuda  # [cuda_compiler_version != "None"]
+        - rdkit
     test:
       commands:
         - conformer.stormm --help                     # [cuda_compiler_version == "None"]
@@ -32,6 +35,7 @@ outputs:
         - test -f ${PREFIX}/bin/ffrefine.stormm.cuda  # [cuda_compiler_version != "None"]
         #- dynamics.stormm --help                     # [cuda_compiler_version == "None"]
         #- test -f ${PREFIX}/bin/dynamics.stormm.cuda # [cuda_compiler_version != "None"]
+        - test -f ${PREFIX}/lib/cmake/stormm/STORMMTargets.cmake
 
   {% set stormm_cpu_gpu = "stormm-cpu" %}   # [cuda_compiler_version == "None"]
   {% set stormm_cpu_gpu = "stormm-gpu" %}   # [cuda_compiler_version != "None"]
