Massive commit for much progress

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,6 +17,7 @@ set(STORMM_TEST_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Structure/test_local_arrangement.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Structure/test_isomerization.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Structure/test_mesh_construction.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/Synthesis/test_condensate.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Synthesis/test_synthesis.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Synthesis/test_atomgraph_synthesis.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Potential/test_valence_evaluation.cpp
