Update the PhaseSpace and PhaseSpaceSynthesis for different memory formats

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ set(STORMM_TEST_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Topology/test_topology_mods.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Trajectory/test_amber_coordinates.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Trajectory/test_coordinate_swap.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/Trajectory/test_coordinate_formats.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Chemistry/test_chemical_features.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Chemistry/test_atommask.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Structure/test_local_arrangement.cpp
